# freesound

./: .dockerignore  .eslintrc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierrc  .project  .pydevproject  .travis.yml  ACKNOWLEDGMENTS  AUTHORS.md  DEVELOPERS.md  Dockerfile  LICENSE  README  README.md  conftest.py  context_processor.py  docker-compose.test.yml  docker-compose.travis.yml  docker-compose.yml  environment  fabfile.py  freesound.code-workspace  hello  initial_data.json  local_settings.example.py  logger.example.ini  logger.example.py  logger.py  manage.py  middleware.py  package-lock.json  package.json  pyproject.toml  readme.textile  readme.txt  requirements.in  requirements.linters.txt  (+9 more)
.github/: pull_request_template.md
_LICENSE/: LICENSES  javascript_preamble.js  python_preamble.py
_docs/: bst_description_v1.1_250725.csv  deployment.graffle  django_admin_fields.txt  installing_with_macports.txt  load testing numbers.numbers  server_configuration.markdown  vincent_install_notes.txt
_sandbox/: .project  .pydevproject  embed_example.html
_sql/: nightingale_sql_setup.sql  nightingale_triggers.sql
accounts/: admin.py  forms.py  management.py  modelbackend.py  models.py  tests.py  urls.py  views.py
api/: admin.py  api_utils.py  forms.py  handlers.py  key_authentication.py  models.py  urls.py  views.py
apiv2/: TODO.txt  admin.py  apiv2_utils.py  authentication.py  combined_search_strategies.py  examples.py  exceptions.py  forms.py  handlers.py  models.py  oauth2_admin.py  oauth2_urls.py  oauth2_validators.py  pagination.py  serializers.py  tests.py  throttling.py  urls.py  utils.py  views.py
bookmarks/: admin.py  forms.py  models.py  tests.py  views.py
clickthrough/: models.py  views.py
clustering/: __init__.py  apps.py  clustering.py  clustering_methods.py  clustering_server.py  clustering_settings.example.py  clustering_settings.py  features_store.py  gaia_wrapper.py  interface.py  tasks.py
comments/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
contributions/: bounty-1777306122.md
docker/: Dockerfile.base  Dockerfile.clustering  Dockerfile.py2  Dockerfile.py2.base  Dockerfile.py3.base  Dockerfile.search5  Dockerfile.similarity  Dockerfile.solr  Dockerfile.tagrecommendation  Dockerfile.test  Dockerfile.textencoder  Dockerfile.travis_test_runner  Dockerfile.workers_web  Makefile  entrypoint.sh  rabbitmq.conf
docs/: HOWTO.markdown  HOWTO.rtf  INSTALL  INSTALL.markdown  INSTALL.rtf  paypalwrapper.txt  repackage-recaptcha-client.sh  requirements-python.txt  server_configuration.markdown  textmate_project.tmproj  todo.txt
donations/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
favorites/: admin.py  models.py
follow/: admin.py  follow_utils.py  models.py  tests.py  urls.py  utils.py  views.py
forum/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
freesound/: .gitignore  .project  .pydevproject  __init__.py  audio_descriptor_settings.py  celery.py  context_processor.py  fabfile.py  fakemail.py  freesound  freesound.ini  freesound.wsgi  freesound_exceptions.py  gulpfile.js  initial_data.json  local_settings.example.py  local_settings_test.py  logger.example.ini  logger.example.py  logger.py  middleware.py  package.json  panels.py  readme.txt  render.py  settings.py  storage.py  templates-textmate-project.tmproj  test_settings.py  urls.py  whitenoise.py  wsgi.py
freesound_web/: manage.py  settings.py
fscollections/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
fso/: catalog-v001.xml  test.rdf  v0.rdf
general/: admin.py  apps.py  models.py  tasks.py  tests.py  views.py
geotags/: admin.py  models.py  tests.py  urls.py  views.py
media/: .gitignore  all.css  sample.csv  sample.xls  sample.xlsx
messages/: admin.py  apps.py  forms.py  models.py  views.py
monitor/: tests.py  urls.py  views.py
ontology/: catalog-v001.xml  fso.owl
queries/: models.py
ratings/: admin.py  models.py  tests.py  urls.py  views.py
sandbox/: .pydevproject  activity.py
search/: abuse.py  forms.py  search_query_processor.py  solr_tests.py  solrapi.py  tests.py  views.py
similarity/: Dockerfile  __init__.py  descriptorNames.txt  docker-compose.yml  exc_string.py  gaia_indexer.py  gaia_wrapper.py  global_indexer.py  inject_similarity.py  logger.py  main_similarity.py  requirements.txt  server.py  settings.py  similarity_indexing_server.py  similarity_server.py  similarity_server_utils.py  similarity_settings.example.py  similarity_settings.py  test_new_similarity.py  threads.py  urls.py
sounds/: admin.py  forms.py  management.py  models.py  sitemaps.py  tasks.py  tests.py  views.py
static/: .babelrc  README.md  webpack.config.js
stats/: gunicorn_stats.py
stopforumspam/: admin.py  middleware.py  models.py  settings.py
support/: forms.py  tests.py  views.py
tagrecommendation/: Dockerfile  __init__.py  client.py  compute_similarity_matrixs.py  docker-compose.yml  requirements.txt  server.py  tagrecommendation_server.py  tagrecommendation_settings.example.py  tagrecommendation_settings.py  update_tagrecommendation_data.py  utils.py
tags/: admin.py  models.py  tests.py  views.py
templates/: 403.html  404.html  429.html  500.html  base.html  donations_cache.html  front.html  index.html  permissiondenied.html  pledgie_cache.html  rss_cache.html
templates2/: base.html  index.html
templates_bw/: base.html  front.html  rss_cache_bw.html  simple_page.html
textencoder/: client.py  requirements.txt  server.py
tickets/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
travis/: install_gaia.sh
user_feedback/: admin.py  experiments.py  forms.py  models.py  tests.py  urls.py  views.py
utilities/: db_anonymizer.sh  launch_django_dev
utils/: admin_helpers.py  aws.py  cache.py  cdn.py  chunks.py  clustering_utilities.py  converters.py  dbtime.py  download_limit.py  downloads.py  encryption.py  filesystem.py  forms.py  frontend_handling.py  functional.py  images.py  locations.py  logging_filters.py  mail.py  mirror_files.py  (+26 more)
(+2209 files in other folders)
