[project]
name = "freesound"
version = "1.0"
requires-python = "==3.10"

[tool.ruff]
line-length = 120
exclude = ["**/migrations", "_docs/**/*"]

[tool.ruff.lint]
select = [
    "E",  # Pycodestyle Errors
    "F6",  # Pyflakes
    "F7",
    "PLE",  # Pylint Error
]
ignore = ["E501", "E7", "E4"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "freesound.test_settings"
python_files = "test*.py"
python_classes = ["Test*", "*Test"]
addopts = "--ignore=freesound-data -m 'not search_engine'"
markers = [
    "search_engine: solr tests",
    "forum: search engine forum tests",
    "sounds: search engine search tests",
]
