[project]
name = "freesound"
version = "1.0"
requires-python = "==3.10"

[tool.ruff]
line-length = 120
exclude = ["**/migrations", "_docs/**/*", "tagrecommendation/**", "similarity/**"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "S",   # flake8-bandit
    "DJ",  # flake8-django
    "PIE", # flake8-pie
    "PLE", # Error
]

ignore = [
    "E501",  # line-too-long
    "E7",
    "E4",    # multiple-imports-on-one-line
    "S101",  # assert
    "B904",  # raise-without-from-inside-except
    "DJ001", # django-nullable-model-string-field
    "DJ007", # django-all-with-model-form
    "S106",  # hardcoded-password-func-arg
    "S110",  # try-except-pass
    "F841",  # unused-variable
    "A001",  # builtin-variable-shadowing
    "DJ012", # django-unordered-body-content-in-model
    "DJ008", # django-model-without-dunder-str
    "S308",  # suspicious-mark-safe-usage
    "B006",  # mutable-argument-default
    "B905",  # zip-without-explicit-strict
    "B007",  # unused-loop-control-variable
    "G001",  # logging-string-format
    "A002",  # builtin-argument-shadowing
    "S324",  # hashlib-insecure-hash-function
    "S603",  # subprocess-without-shell-equals-true
    "F405",  # undefined-local-with-import-star-usage
]

[tool.ruff.lint.per-file-ignores]
"clustering/**" = ["A004"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "freesound.test_settings"
python_files = "test*.py"
python_classes = ["Test*", "*Test"]
addopts = "--ignore=freesound-data -m 'not search_engine'"
markers = [
    "search_engine: solr tests",
    "forum: search engine forum tests",
    "sounds: search engine search tests",
]
