[project]
name = "freesound"
version = "1.0"
requires-python = "==3.10.*"
dependencies = [
    "akismet==1.0.1",
    "alabaster==0.7.13",
    "beautifulsoup4==4.9.3",
    "bleach==5.0.1",
    "boto3==1.26.130",
    "celery==5.3.4",
    "debugpy==1.5.1",
    "dj-database-url==2.3.0",
    "django~=4.2.19",
    "django-admin-sortable==2.3",
    "django-amazon-ses==4.0.1",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar==5.0.1",
    "django-extensions==3.2.3",
    "django-multiupload-plus==0.1.0",
    "django-oauth-toolkit==3.0.1",
    "django-object-actions==4.3.0",
    "django-ratelimit==4.1.0",
    "django-recaptcha==4.0.0",
    "django-silk==5.3.2",
    "djangorestframework==3.15.2",
    "djangorestframework-jsonp==1.0.2",
    "djangorestframework-xml==2.0.0",
    "djangorestframework-yaml==2.0.0",
    "fabric==2.6.0",
    "feedparser~=6.0.10",
    "freezegun==1.2.2",
    "future~=0.18.2",
    "graypy==2.1.0",
    "gunicorn==21.2.0",
    "ipython==8.14.0",
    "jinja2==3.0.3", # This version needed for sphinx to not raise errors
    "luqum==0.13.0",
    "mapbox==0.18.1",
    "markdown==3.4.1",
    "networkx==3.2.1",
    "numpy==1.24.3",
    "oauthlib>=3.3.1",
    "openpyxl==3.1.0",
    "pillow==9.5.0",
    "psutil~=7.0.0",
    "psycopg~=3.2.4",
    "pyjwt==2.6.0",
    "pyparsing==2.4.7",
    "pysndfile==1.4.4",
    "pysolr==3.10.0",
    "pytest~=8.0.2",
    "pytest-django~=4.8.0", # community detection in clustering
    "python-louvain==0.16", # community detection in clustering
    "pyyaml==6.0.1",
    "redis==5.2.1",
    "scikit-learn==1.4.1.post1", # clustering
    "scipy==1.12.0", # clustering
    "sentry-sdk[django]~=2.21.0",
    "sphinx==1.6.3",
    "stripe==2.28.1",
    "whitenoise~=6.9.0",
    "xlrd==2.0.1", # for reading .xls files (but not .xlsx)
    "zenpy==1.1.3",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.8",
    "pip-licenses>=5.5.0",
    "ty>=0.0.7",
]

[tool.ruff]
line-length = 120
exclude = ["**/migrations", "_docs/**/*", "tagrecommendation/**", "similarity/**"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "S",   # flake8-bandit
    "DJ",  # flake8-django
    "PIE", # flake8-pie
    "PLE", # Error
]

ignore = [
    "E501",  # line-too-long
    "E7",
    "E4",    # multiple-imports-on-one-line
    "S101",  # assert
    "B904",  # raise-without-from-inside-except
    "DJ001", # django-nullable-model-string-field
    "DJ007", # django-all-with-model-form
    "S106",  # hardcoded-password-func-arg
    "S110",  # try-except-pass
    "F841",  # unused-variable
    "A001",  # builtin-variable-shadowing
    "DJ012", # django-unordered-body-content-in-model
    "DJ008", # django-model-without-dunder-str
    "S308",  # suspicious-mark-safe-usage
    "B006",  # mutable-argument-default
    "B905",  # zip-without-explicit-strict
    "B007",  # unused-loop-control-variable
    "G001",  # logging-string-format
    "A002",  # builtin-argument-shadowing
    "S324",  # hashlib-insecure-hash-function
    "S603",  # subprocess-without-shell-equals-true
    "F405",  # undefined-local-with-import-star-usage
]

[tool.ruff.lint.per-file-ignores]
"clustering/**" = ["A004"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "freesound.test_settings"
python_files = "test*.py"
python_classes = ["Test*", "*Test"]
addopts = "--ignore=freesound-data -m 'not search_engine'"
markers = [
    "search_engine: solr tests",
    "forum: search engine forum tests",
    "sounds: search engine search tests",
]

[tool.ty.src]
exclude = [
    "tagrecommendation/*",
    "_docs/*",
    "**/migrations/*",
]
